fix: header spacing

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1524,13 +1524,12 @@ ais-highlight-0000000000 {
     color: var(--docs_text_primary) !important;
 }
 
-.sidebar-examples {
-    display: none;
-}
-
 @media screen and (max-width: 560px) {
     .sidebar-examples {
         display: block;
     }
-    
+
+    .head-items {
+        display: none;
+    }
 }
